Skaffold/k8s/archive/istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-app01
  namespace: app01
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app01.127.0.0.1.nip.io"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-app01
  namespace: app01
spec:
  hosts:
  - "grafana.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-app01
  http:
  - name: 'app01-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: app01
